frontend-portifolio-k8s/frontend-ratelimit-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frontend-ratelimit
  namespace: default
spec:
  rateLimit:
    average: 50
    burst: 50
