frontend-portifolio-k8s/frontend-security-headers-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frontend-security-headers
  namespace: default
spec:
  headers:
    frameDeny: true
    contentTypeNosniff: true
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
