frontend-portifolio-k8s/frontend-portifolio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: portfolio-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
