frontend-portifolio-k8s/frontend-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-frontend-security-headers@kubernetescrd, default-frontend-ratelimit@kubernetescrd, default-bouncer@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: site.carldev.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend-service
                port:
                  number: 80
